<resources>
    <string name="app_name">Friends: Who Did it?</string>
    <string name="zero">0</string>
    <string name="separator">/</string>
    <string name="submit">Submit Answer</string>
    <string name="end_game_text">End Game</string>
    <string name="answer0">Answer 0</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="background_image">Background Image</string>
    <string name="lives_left">Number of Lives Left</string>


    <string name="main_menu">Main Menu</string>
    <string name="new_game">New Game</string>
    <string name="final_Score">Final Score</string>

    <string name="level">Level</string>
    <string name="one">1</string>
    <string name="question">This is an example question for this game.</string>

    <string name="play_game">Play Game</string>
    <string name="stats">Stats</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="congrats">Joey would be proud of you:</string>
    <string name="guess">You guessed correctly: </string>

    <string name="q1">This is question 1</string>
    <string name="q2">This is question 2</string>
    <string name="q3">This is question 3</string>
    <string name="q4">This is question 4</string>
    <string name="q5">This is question 5</string>
    <string name="q6">This is question 6</string>
    <string name="q7">This is question 7</string>


    <string name="save_stats">Save Stats</string>
    <string name="player_name">Young Dred</string>
    <string name="player_name_text">Player Name</string>
    <string name="points">Points</string>
    <string name="highest_final_score">Highest Final Score</string>
    <string name="number_times_played">Number Times Played</string>
    <string name="reset_stats">Reset Stats</string>
    <string name="achievement_title">Achievement Title</string>
    <string name="achievement_description">Achievement Description</string>
    <string name="achievements">Achievements</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Sign in</string>
    <string name="password_olvidada">Forgot Your Password?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_logged_in">Already Logged in?</string>
    <string name="log_in">Log In</string>
    <string name="sign_out">Sign Out</string>


</resources>