<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youngdredstudios.friends_whodidit.GameActivity">


    <ImageView
        android:id="@+id/imv_main_game_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/fountain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_game_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_game_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/points"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_game_points_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_game_points_text"
            app:layout_constraintStart_toStartOf="@id/tv_game_points_text"
            app:layout_constraintTop_toBottomOf="@id/tv_game_points_text" />

        <ImageView
            android:id="@+id/iv_game_lives_left_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/lives_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_game_points_text"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/full_heart" />
        <ImageView
            android:id="@+id/iv_game_lives_left_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/lives_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_game_lives_left_1"
            app:srcCompat="@drawable/full_heart" />
        <ImageView
            android:id="@+id/iv_game_lives_left_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/lives_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_game_lives_left_2"
            app:srcCompat="@drawable/full_heart" />

        <TextView
            android:id="@+id/tv_game_level_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="60dp"
            android:text="@string/level"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_game_points_number"
            app:layout_constraintStart_toEndOf="@+id/iv_game_lives_left_3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_game_level_number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/one"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_game_points_number"
            app:layout_constraintEnd_toEndOf="@+id/tv_game_level_text"
            app:layout_constraintStart_toStartOf="@+id/tv_game_level_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_game_level_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_main_question_text"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/question"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/question"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_game_stats" />

    <TextView
        android:id="@+id/tv_main_correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/zero"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_main_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/separator"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_main_correct_answers" />

    <TextView
        android:id="@+id/tv_main_total_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/zero"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_main_separator" />

    <Button
        android:id="@+id/btn_main_end_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ll_main_answers_0_1"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_main_answers_2_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_question_text">

        <ImageButton
            android:id="@+id/img_btn_main_answer_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/answer0"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/joey" />

        <ImageButton
            android:id="@+id/img_btn_main_answer_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/answer1"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/phoebe" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_answers_2_3"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_main_answers_0_1">

        <ImageButton
            android:id="@+id/img_btn_main_answer_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/answer2"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/ross" />

        <ImageButton
            android:id="@+id/img_btn_main_answer_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/answer3"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/rachel" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>