<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_achievement_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty_heart" />

    <TextView
        android:id="@+id/tv_achievement_title"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/achievement_title"
        app:layout_constraintEnd_toStartOf="@+id/progressBar_achievement_pct"
        app:layout_constraintStart_toEndOf="@+id/iv_achievement_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_achievement_logo" />

    <TextView
        android:id="@+id/tv_achievement_desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/achievement_description"
        app:layout_constraintBottom_toBottomOf="@+id/iv_achievement_logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_achievement_title"
        app:layout_constraintStart_toStartOf="@+id/tv_achievement_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_achievement_title" />

    <ProgressBar
        android:id="@+id/progressBar_achievement_pct"
        style="?android:attr/progressBarStyle"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="@+id/iv_achievement_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_achievement_logo"/>

    <TextView
        android:id="@+id/tv_progress_bar_achievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar_achievement_pct"
        app:layout_constraintEnd_toEndOf="@+id/progressBar_achievement_pct"
        app:layout_constraintStart_toStartOf="@+id/progressBar_achievement_pct"
        app:layout_constraintTop_toTopOf="@+id/progressBar_achievement_pct" />
</androidx.constraintlayout.widget.ConstraintLayout>