<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youngdredstudios.friends_whodidit.LeaderboardActivity">

    <ImageView
        android:contentDescription="@string/background_image"
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/friends_banner" />

    <TextView
        android:id="@+id/tv_leaderboard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/leaderboard"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TableLayout
        android:id="@+id/tab_lay_leaderboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="24dp"
        android:showDividers="middle"
        android:shrinkColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_leaderboard_text">

        <TableRow
            android:id="@+id/header_leaderboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tv_leaderboard_header_name"
                android:layout_weight="1"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_leaderboard_header_level"
                android:layout_weight="1"
                android:text="@string/level"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_leaderboard_header_points"
                android:layout_weight="1"
                android:text="@string/points"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_leaderboard_first_player_name"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_first_player_level"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_first_player_points"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_leaderboard_second_player_name"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_second_player_level"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_second_player_points"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_leaderboard_third_player_name"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_third_player_level"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_third_player_points"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_leaderboard_fourth_player_name"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_fourth_player_level"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_fourth_player_points"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_leaderboard_fifth_player_name"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_fifth_player_level"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_leaderboard_fifth_player_points"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>


    </TableLayout>

    <ProgressBar
        android:id="@+id/progress_bar_leaderboard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        />
</androidx.constraintlayout.widget.ConstraintLayout>